--- a/package.json
+++ b/package.json
@@ -1,45 +1,57 @@
 {
-    "name": "friend-time",
-    "version": "1.0.0",
-    "author": "Kevin Novak",
-    "description": "Discord bot for converting times between time zones.",
-    "license": "MIT",
-    "private": true,
-    "engines": {
-        "node": ">=14.0.0"
-    },
-    "main": "dist/start.js",
-    "scripts": {
-        "lint": "tslint --project .",
-        "lint:fix": "tslint --fix --project .",
-        "format": "prettier --check .",
-        "format:fix": "prettier --write .",
-        "build": "tsc",
-        "start": "npm run build && node --enable-source-maps dist/start.js",
-        "start:shard": "npm run build && node --enable-source-maps dist/app.js",
-        "start:pm2": "npm run build && npm run pm2:start",
-        "pm2:start": "pm2 start process.json",
-        "pm2:stop": "pm2 stop process.json",
-        "pm2:delete": "pm2 delete process.json"
-    },
-    "dependencies": {
-        "chrono-node": "1.4.8",
-        "discord.js": "12.5.0",
-        "discord.js-multilingual-utils": "1.0.10",
-        "discord.js-rate-limiter": "1.0.2",
-        "moment-timezone": "0.5.32",
-        "mysql": "2.18.1",
-        "node-fetch": "2.6.1",
-        "node-schedule": "1.3.2",
-        "pm2": "^4.5.0"
-    },
-    "devDependencies": {
-        "@types/mysql": "2.15.15",
-        "@types/node": "14.14.9",
-        "@types/node-fetch": "2.5.7",
-        "@types/node-schedule": "1.3.1",
-        "prettier": "^2.2.0",
-        "tslint": "^6.1.3",
-        "typescript": "^4.1.2"
-    }
+  "name": "friend-time",
+  "version": "1.0.0",
+  "author": "Kevin Novak",
+  "description": "Discord bot for converting times between time zones.",
+  "license": "MIT",
+  "private": true,
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "main": "dist/start.js",
+  "scripts": {
+    "lint": "tslint --project .",
+    "lint:fix": "tslint --fix --project .",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "build": "tsc",
+    "qstart": "node --enable-source-maps dist/start.js",
+    "start": "npm run build && node --enable-source-maps dist/start.js",
+    "start:shard": "npm run build && node --enable-source-maps dist/app.js",
+    "start:pm2": "npm run build && npm run pm2:start",
+    "pm2:start": "pm2 start process.json",
+    "pm2:stop": "pm2 stop process.json",
+    "pm2:delete": "pm2 delete process.json"
+  },
+  "dependencies": {
+    "chrono-node": "1.4.8",
+    "discord.js": "12.5.0",
+    "discord.js-multilingual-utils": "1.0.10",
+    "discord.js-rate-limiter": "1.0.2",
+    "moment-timezone": "0.5.32",
+    "mysql": "2.18.1",
+    "node-fetch": "2.6.1",
+    "node-schedule": "1.3.2",
+    "pm2": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/mysql": "2.15.15",
+    "@types/node": "14.14.9",
+    "@types/node-fetch": "2.5.7",
+    "@types/node-schedule": "1.3.1",
+    "prettier": "^2.2.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.2"
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nairu/Friend-Time.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Nairu/Friend-Time/issues"
+  },
+  "homepage": "https://github.com/Nairu/Friend-Time#readme"
 }
